--- a/src/app/portfolio/portfolio-detail/portfolio-detail.component.html
+++ b/src/app/portfolio/portfolio-detail/portfolio-detail.component.html
@@ -4,12 +4,13 @@
           < Return to Gallery
     </a>
     <div class="image">
+        <div class = "caption">
+            <div id = "caption">
+              {{image.caption}}
+            </div>
+          </div>
       <img src = "{{image.url}}" />
+      
     </div>
-    <div class = "caption">
-        <span id = "caption">
-          {{image.caption}}
-        </span>
-      </div>
   </div>
 </div>
