--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,6 @@
 
-<p>Contact Form</p>
+<div class="container">
+  <p>Contact Form</p>
 <form>
   <label><br><br>
     <span>Name</span>
@@ -37,4 +38,5 @@
 <agm-map [latitude]="lat" [longitude]="lng">
     <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
   </agm-map>
+</div>
 </div>
