--- a/src/app/portfolio/portfolio-detail/portfolio-detail.component.css
+++ b/src/app/portfolio/portfolio-detail/portfolio-detail.component.css
@@ -7,13 +7,7 @@
 }
 
 .image{
-    /* position: absolute;
-    left: 50px;
-    top: 100px;
-    padding: 100px;
-    width: 100%;
-    height: auto; */
-    padding: 50px;
+    padding: 40px 25px 25px;
 }
 
 .image img {
@@ -24,22 +18,26 @@
 .container{
     width: auto;
     height: 100%;
-    position: relative;
+    
 }
 .caption{
     position: absolute;
-    left: 20%;
-    top: 20%;
+    top: 35%;
+    width: 30%;
+    text-align: center;
     font-family: 'Lato', sans-serif;
     font-weight: lighter;
     text-transform: uppercase;
     font-size: 1.5em;
     color: white;
     background-color: rgba(8, 8, 8, 0.253);
+    background-size:cover;
+
     padding: 15px;
-    padding-right: 150px;
-      
+    padding-right: 150px;     
 }
+
+
 a{
     padding-top:35px;
     padding-left: 40px;
